--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -1,5 +1,10 @@
+
 searchbar {
   -moz-binding: url("chrome://browser/content/search/search.xml#searchbar");
+}
+
+#SearchAutoComplete {
+  -moz-binding: url("chrome://browser/content/search/search.xml#searchbar-result-popup");
 }
 
 
@@ -7,7 +12,7 @@ searchbar {
   -moz-binding: url(chrome://browser/content/urlbarBindings.xml#urlbar);
 }
 
-#PopupAutoComplete {
+#UrlbarAutoComplete {
   -moz-binding: url("chrome://browser/content/urlbarBindings.xml#urlbar-result-popup");
 }
 
