--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -1,10 +1,5 @@
-
 searchbar {
   -moz-binding: url("chrome://browser/content/search/search.xml#searchbar");
-}
-
-#SearchAutoComplete {
-  -moz-binding: url("chrome://browser/content/search/search.xml#searchbar-result-popup");
 }
 
 
@@ -12,7 +7,7 @@ searchbar {
   -moz-binding: url(chrome://browser/content/urlbarBindings.xml#urlbar);
 }
 
-#UrlbarAutoComplete {
+#PopupAutoComplete {
   -moz-binding: url("chrome://browser/content/urlbarBindings.xml#urlbar-result-popup");
 }
 
