Bug 394299 - UI to provide access to extension options from app options cut off (also fixes bug 393945). r=mano
UltraBlame original commit: 7afd6ed1539708351aaa30dddf15da481304ec73

--- a/browser/themes/winstripe/browser/preferences/preferences.css
+++ b/browser/themes/winstripe/browser/preferences/preferences.css
@@ -264,3 +264,9 @@ filefield[disabled="true"] .fileFieldIcon {
 #chooseClientAppCell {
   -moz-padding-end: 12px;
 }
+
+
+
+.bottomBox {
+  padding-bottom: 2px;
+}
