--- a/testing/extensions/community/chrome/skin/browserOverlays.css
+++ b/testing/extensions/community/chrome/skin/browserOverlays.css
@@ -1,3 +1,39 @@
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
  #qa-notify {
   right: 18px;
   bottom: 21px;
@@ -22,4 +58,8 @@
 #qa-notify-header {
   font-size: 1.5em;
   font-weight: bold;
+}
+
+#qa-statusbar-overlay {
+  list-style-image: url('chrome://qa/skin/qmo-16px.png');
 }
