--- a/testing/extensions/community/chrome/skin/qa.css
+++ b/testing/extensions/community/chrome/skin/qa.css
@@ -72,7 +72,6 @@
   color: #333;
 }
 
-
 html|li {
   list-style-type: none !important;
 }
@@ -91,38 +90,70 @@ html|li {
 
 
 
+
 #qa_tabbox #qa_tabrow {
   height: 30px !important;
   padding-top: 5px !important;
 }
+
 #qa_tabbox .tab-icon-image {
   list-style-image: none;
   width: 0;
 }
+
 #qa_tabbox #qa-tabbar-qmo {
   list-style-image: url(qmo-16px.png);
   width: 15px;
 }
-#qa_tabbox tab, #qa_tabbox tabs spacer {
-  border-bottom: 1px solid #ACA899 !important;
-}
-.tabs-left, .tabs-right {
-  -moz-border-bottom-colors: #ACA899 #ACA899 !important;
-}
-#qa_tabbox tab[selected="true"] {
-  border-bottom: 1px solid #E8E5D8 !important;
-}
+
 #qa_tabbox #qa-tabbar-spacer {
   width: 93px;
 }
 
+
+#qa_tabbox tab, #qa_tabbox tabs spacer {
+  border-bottom: 1px solid #ACA899 !important;
+}
+
+.tabs-left, .tabs-right {
+  -moz-border-bottom-colors: #ACA899 !important;
+}
+
+#qa_tabbox tab[selected="true"] {
+  border-bottom: 1px solid #E8E5D8 !important;
+}
+
 tabs {
-  border-bottom: 3px solid #E8E5D8;
+  border-bottom: 1px solid #E8E5D8;
+}
+
+.tab-close-button {
+    display: none !important;
+}
+
+.tabbrowser-tab.highlight > .tab-image-right {
+	background: url("chrome://qa/skin/highlight-start.png") no-repeat !important;
+}
+.tabbrowser-tab.highlight > .tab-image-left {
+	background: url("chrome://qa/skin/highlight-end.png") no-repeat !important;
+}
+.tabbrowser-tab.highlight > .tab-image-middle {
+	background: url("chrome://qa/skin/highlight-mid.png") repeat-x !important;
+}
+
+.tabbrowser-tab.highlight:hover > .tab-image-right {
+	background: url("chrome://qa/skin/highlight-hover-start.png") no-repeat !important;
+}
+.tabbrowser-tab.highlight:hover > .tab-image-left {
+	background: url("chrome://qa/skin/highlight-hover-end.png") no-repeat !important;
+}
+.tabbrowser-tab.highlight:hover > .tab-image-middle {
+	background: url("chrome://qa/skin/highlight-hover-mid.png") repeat-x !important;
 }
 
 
 tab:focus > .tab-middle {
-  outline: 1px none invert !important; 
+  outline: 1px none invert !important;
 }
 
 
@@ -204,4 +235,3 @@ tab:focus > .tab-middle {
 .list {
   padding-left: 10px;
 }
-
