--- a/testing/extensions/community/platform/Darwin/chrome/skin/platform.css
+++ b/testing/extensions/community/platform/Darwin/chrome/skin/platform.css
@@ -1,10 +1,77 @@
-#qa-tabbar-spacer {  width: 17px !important;}#qa-tabbar-qmo {  margin-left:  10px !important;  margin-right: 17px !important;}
 
-#qa_tabpanels * {
-	background-color: #ebebeb !important;
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+#qa-tabbar-spacer {
+  width: 17px !important;
 }
 
-groupbox * {
-	background: url("chrome://global/skin/10pct_transparent_grey.png") repeat !important;
+#qa_tabbox tabpanel {
+  background-color: transparent !important;
 }
 
+#qa_tabbox tabpanels {
+  background-color: transparent !important;
+}
+
+#qa_tabbox groupbox {
+  background-color: transparent !important;
+}
+#qa_tabbox caption {
+  background-color: transparent !important;
+}
+
+
+#qa-tabbar-qmo {
+  width:16px;
+  margin-left: 13px;
+  margin-right: 5px;
+}
+
+#qa-testcase-comment {
+  background-color: transparent !important;
+  max-width: 170px;
+}
+
+#qa-preferences-litmus-username {
+  max-width: 350px;
+  width: 350px;
+}
+
+#qa-preferences-litmus-password {
+  max-width: 400px;
+  width: 350px;
+}
