--- a/toolkit/mozapps/downloads/content/downloads.css
+++ b/toolkit/mozapps/downloads/content/downloads.css
@@ -27,6 +27,10 @@ richlistitem[type="download"][state="6"] {
   -moz-binding: url('chrome://mozapps/content/downloads/download.xml#download-blocked');
 }
 
+richlistitem[type="download"][state="7"] {
+  -moz-binding: url('chrome://mozapps/content/downloads/download.xml#download-scanning');
+}
+
 
 richlistitem[type="download"]:not([selected="true"]) button {
   -moz-user-focus: none;
