--- a/browser/themes/pinstripe/browser/places/places.css
+++ b/browser/themes/pinstripe/browser/places/places.css
@@ -1,12 +1,52 @@
 
+#placesToolbar {
+  border-bottom: none;
+}
+
+
+
+#back-button {
+  list-style-image: url("chrome://browser/skin/Toolbar.png");
+  -moz-image-region: rect(0px, 24px, 24px, 0px);
+}
+#back-button[disabled="true"] {
+ -moz-image-region: rect(48px, 24px, 72px, 0px) !important;
+}
+
+
+
+#forward-button {
+  list-style-image: url("chrome://browser/skin/Toolbar.png");
+  -moz-image-region: rect(0px, 48px, 24px, 24px);
+}
+#forward-button[disabled="true"] {
+ -moz-image-region: rect(48px, 48px, 72px, 24px) !important;
+}
+
+
+#organizeButton {
+  list-style-image: url("chrome://browser/skin/wrench.png");
+}
+
+
+#viewMenu {
+  list-style-image: url("chrome://browser/skin/wrench.png");
+}
+
+
+#maintenanceButton {
+  list-style-image: url("chrome://browser/skin/wrench.png");
+}
+
+
 #placesView {
-  padding: 8px 6px 6px 8px;
+  border-top: 1px solid ThreeDDarkShadow;
   -moz-user-focus: ignore;
 }
 
 #splitter {
   border: 0px;
-  width: 10px;
+  width: 3px;
   background-color: transparent;
 }
 
@@ -22,19 +62,12 @@
   border: 0px;
 }
 
-#placesListContainer {
-  -moz-appearance: listbox;
-  margin: 7px 0px 7px 6px;
+#contentView {
 }
 
 #placeContent {
   -moz-appearance: none;
   border: 0px;
-}
-
-#content {
-  margin: 7px 6px 7px 0px;
-  -moz-appearance: listbox;
 }
 
 treechildren::-moz-tree-image(title) {
@@ -82,28 +115,11 @@ treechildren::-moz-tree-twisty(title, separator) {
 }
 
 
-.commands {
-  padding-bottom: 5px;  
-}
-
-.commandGroupButton {
-  margin-left: 0px;
-  margin-top: 0px;
-}
-
-.commandGroupButton.first {
-  margin-right: -10px;
-}
-
-.commandGroupButton.last {
-  margin-left: 20px;
-}
-
-
 #titlebar {
   background-color: -moz-Dialog;
   border-bottom: 2px solid;
   -moz-border-bottom-colors: ThreeDHighlight ThreeDShadow;
+  padding: 0;
 }
 
 #showingPrefix {
@@ -256,109 +272,3 @@ treechildren::-moz-tree-twisty(title, separator) {
   min-width:0em;
 }
 
-
-
-
-
-#mainToolbar toolbarbutton {
-  list-style-image: url("chrome://browser/skin/places/organizer-toolbar.png");
-  -moz-box-orient: vertical;
-}
-
-
-#newbookmark {
-  -moz-image-region: rect(0px, 168px, 24px, 144px);
-}
-#newbookmark:not([disabled="true"]):hover {
-  -moz-image-region: rect(24px, 168px, 48px, 144px);
-}
-#newbookmark[disabled="true"] {
-  -moz-image-region: rect(48px, 168px, 72px, 144px);
-}
-#newbookmark:not([disabled="true"]):hover:active {
-  -moz-image-region: rect(72px, 168px, 96px, 144px);
-}
-
-
-#newfolder {
-  -moz-image-region: rect(0px, 24px, 24px, 0px);
-}
-#newfolder:not([disabled="true"]):hover {
-  -moz-image-region: rect(24px, 24px, 48px, 0px);
-}
-#newfolder[disabled="true"] {
-  -moz-image-region: rect(48px, 24px, 72px, 0px);
-}
-#newfolder:not([disabled="true"]):hover:active {
-  -moz-image-region: rect(72px, 24px, 96px, 0px);
-}
-
-
-#newseparator {
-  -moz-image-region: rect(0px, 48px, 24px, 24px);
-}
-#newseparator:not([disabled="true"]):hover {
-  -moz-image-region: rect(24px, 48px, 48px, 24px);
-}
-#newseparator[disabled="true"] {
-  -moz-image-region: rect(48px, 48px, 72px, 24px);
-}
-#newseparator:not([disabled="true"]):hover:active {
-  -moz-image-region: rect(72px, 48px, 96px, 24px);
-}
-
-
-#moveBookmark {
-  -moz-image-region: rect(0px, 72px, 24px, 48px);
-}
-#moveBookmark:not([disabled="true"]):hover {
-  -moz-image-region: rect(24px, 72px, 48px, 48px);
-}
-#moveBookmark[disabled="true"] {
-  -moz-image-region: rect(48px, 72px, 72px, 48px);
-}
-#moveBookmark:not([disabled="true"]):hover:active {
-  -moz-image-region: rect(72px, 72px, 96px, 48px);
-}
-
-
-#properties {
-  -moz-image-region: rect(0px, 96px, 24px, 72px);
-}
-#properties:not([disabled="true"]):hover {
-  -moz-image-region: rect(24px, 96px, 48px, 72px);
-}
-#properties[disabled="true"] {
-  -moz-image-region: rect(48px, 96px, 72px, 72px);
-}
-#properties:not([disabled="true"]):hover:active {
-  -moz-image-region: rect(72px, 96px, 96px, 72px);
-}
-
-
-#rename {
-  -moz-image-region: rect(0px, 120px, 24px, 96px);
-}
-#rename:not([disabled="true"]):hover {
-  -moz-image-region: rect(24px, 120px, 48px, 96px);
-}
-#rename[disabled="true"] {
-  -moz-image-region: rect(48px, 120px, 72px, 96px);
-}
-#rename:not([disabled="true"]):hover:active {
-  -moz-image-region: rect(72px, 120px, 96px, 96px);
-}
-
-
-#delete {
-  -moz-image-region: rect(0px, 144px, 24px, 120px);
-}
-#delete:not([disabled="true"]):hover {
-  -moz-image-region: rect(24px, 144px, 48px, 120px);
-}
-#delete[disabled="true"] {
-  -moz-image-region: rect(48px, 144px, 72px, 120px);
-}
-#delete:not([disabled="true"]):hover:active {
-  -moz-image-region: rect(72px, 144px, 96px, 120px);
-}
