--- a/browser/themes/winstripe/browser/places/places.css
+++ b/browser/themes/winstripe/browser/places/places.css
@@ -1,12 +1,52 @@
 
+#placesToolbar {
+  border: none;
+}
+
+
+
+#back-button {
+  list-style-image: url("chrome://browser/skin/Toolbar.png");
+  -moz-image-region: rect(0px, 24px, 24px, 0px);
+}
+#back-button[disabled="true"] {
+ -moz-image-region: rect(48px, 24px, 72px, 0px) !important;
+}
+
+
+
+#forward-button {
+  list-style-image: url("chrome://browser/skin/Toolbar.png");
+  -moz-image-region: rect(0px, 48px, 24px, 24px);
+}
+#forward-button[disabled="true"] {
+ -moz-image-region: rect(48px, 48px, 72px, 24px) !important;
+}
+
+
+#organizeButton {
+  list-style-image: url("chrome://browser/skin/wrench.png");
+}
+
+
+#viewMenu {
+  list-style-image: url("chrome://browser/skin/wrench.png");
+}
+
+
+#maintenanceButton {
+  list-style-image: url("chrome://browser/skin/wrench.png");
+}
+
+
 #placesView {
+  border-top: 1px solid ThreeDDarkShadow;
   background-color: Window;
 }
 
 #splitter {
   border: 0px;
   width: 3px;
-  background-color: transparent;
 }
 
 
@@ -15,9 +55,10 @@
 }
 
 #placesList {
-  -moz-appearance: listbox;
-  margin: 6px 0px 7px 6px;
-  width: 160px;
+  -moz-appearance: none;
+  margin: 0px;
+  border: none;
+  padding: 0;
 }
 
 #placeContent {
@@ -26,8 +67,6 @@
 }
 
 #contentView {
-  margin: 6px 6px 7px 0px;
-  -moz-appearance: listbox;
 }
 
 treechildren::-moz-tree-image(title) {
@@ -66,28 +105,11 @@ treechildren::-moz-tree-cell-text(date, session-continue) {
 }
 
 
-.commands {
-  padding-bottom: 5px;  
-}
-
-.commandGroupButton {
-  margin-left: 0px;
-  margin-top: 0px;
-}
-
-.commandGroupButton.first {
-  margin-right: -10px;
-}
-
-.commandGroupButton.last {
-  margin-left: 20px;
-}
-
-
 #titlebar {
   background-color: -moz-Dialog;
   border-bottom: 2px solid;
   -moz-border-bottom-colors: ThreeDHighlight ThreeDShadow;
+  padding: 0;
 }
 
 #showingPrefix {
@@ -256,117 +278,4 @@ treechildren::-moz-tree-cell-text(date, session-continue) {
   background-color: ThreeDFace;
   border-top: 2px solid; 
   -moz-border-top-colors: ThreeDShadow ThreeDHighlight;
-}
-
-
-
-
-
-#mainToolbar toolbarbutton {
-  list-style-image: url("chrome://browser/skin/places/organizer-toolbar.png");
-  -moz-box-orient: vertical;
-  min-width: 57px;
-  padding: 5px;
-}
-
-#mainToolbar toolbarbutton > .toolbarbutton-icon {
-  -moz-margin-end: 0px;
-}
-
-
-#newbookmark {
-  -moz-image-region: rect(0px 24px 24px 0px);
-}
-#newbookmark:not([disabled="true"]):hover {
-  -moz-image-region: rect(24px 24px 48px 0px);
-}
-#newbookmark[disabled="true"] {
-  -moz-image-region: rect(72px 24px 96px 0px);
-}
-#newbookmark:not([disabled="true"]):hover:active {
-  -moz-image-region: rect(48px 24px 72px 0px);
-}
-
-
-#newfolder {
-  -moz-image-region: rect(0px 48px 24px 24px);
-}
-#newfolder:not([disabled="true"]):hover {
-  -moz-image-region: rect(24px 48px 48px 24px);
-}
-#newfolder[disabled="true"] {
-   -moz-image-region: rect(72px 48px 96px 24px);
-}
-#newfolder:not([disabled="true"]):hover:active {
-  -moz-image-region: rect(48px 48px 72px 24px);
-}
-
-
-#newseparator {
-  -moz-image-region: rect(0px 72px 24px 48px);
-}
-#newseparator:not([disabled="true"]):hover {
-  -moz-image-region: rect(24px 72px 48px 48px);
-}
-#newseparator[disabled="true"] {
-  -moz-image-region: rect(72px 72px 96px 48px);
-}
-#newseparator:not([disabled="true"]):hover:active {
-  -moz-image-region: rect(48px 72px 72px 48px);
-}
-
-
-#moveBookmark {
-  -moz-image-region: rect(0px 96px 24px 72px);
-}
-#moveBookmark:not([disabled="true"]):hover {
-  -moz-image-region: rect(24px 96px 48px 72px);
-}
-#moveBookmark[disabled="true"] {
-  -moz-image-region: rect(72px 96px 96px 72px);
-}
-#moveBookmark:not([disabled="true"]):hover:active {
-  -moz-image-region: rect(48px 96px 72px 72px);
-}
-
-
-#properties {
-  -moz-image-region: rect(0px 120px 24px 96px);
-}
-#properties:not([disabled="true"]):hover {
-  -moz-image-region: rect(24px 120px 48px 96px);
-}
-#properties[disabled="true"] {
-  -moz-image-region: rect(72px 120px 96px 96px);
-}
-#properties:not([disabled="true"]):hover:active {
-  -moz-image-region: rect(48px 120px 72px 96px);
-}
-
-
-#rename {
-  -moz-image-region: rect(0px 144px 24px 120px);
-}
-#rename:not([disabled="true"]):hover {
-  -moz-image-region: rect(24px 144px 48px 120px);
-}
-#rename[disabled="true"] {
-  -moz-image-region: rect(72px 144px 96px 120px);
-}
-#rename:not([disabled="true"]):hover:active {
-  -moz-image-region: rect(48px 144px 72px 120px);
-}
-
-
-#delete {
-  -moz-image-region: rect(0px 168px 24px 144px);
-}
-#delete:not([disabled="true"]):hover {
-  -moz-image-region: rect(24px 168px 48px 144px);
-}
-#delete[disabled="true"] {
-  -moz-image-region: rect(72px 168px 96px 144px);
-}
-#delete:not([disabled="true"]):hover:active {
-  -moz-image-region: rect(48px 168px 72px 144px);
 }
