Bug 396121 - make Applications prefpane the right height on all primary platforms. r=mconnor, a1.9=mconnor
UltraBlame original commit: 6b92f068349936ffb20ac8b782ff9c161d9ee059

--- a/browser/themes/winstripe/browser/preferences/preferences.css
+++ b/browser/themes/winstripe/browser/preferences/preferences.css
@@ -109,6 +109,15 @@ radio[pane=paneAdvanced][selected="true"] {
 }
 
 
+#BrowserPreferences[animated="true"] #handlersView {
+  height: 25em;
+}
+
+#BrowserPreferences[animated="false"] #handlersView {
+  -moz-box-flex: 1;
+}
+
+
 filefield {
   margin: 2px 4px;
   -moz-appearance: textfield;
