--- a/browser/components/places/content/organizer.css
+++ b/browser/components/places/content/organizer.css
@@ -27,3 +27,10 @@ button.commandButton {
   display: -moz-box;
 }
 
+
+
+#infoScrollbox[minimal="true"] #editBMPanel_descriptionRow,
+#infoScrollbox[minimal="true"] #editBMPanel_loadInSidebarCheckbox,
+#infoScrollbox[minimal="true"] #editBMPanel_keywordRow {
+  visibility: collapse;
+}
