--- a/layout/style/forms.css
+++ b/layout/style/forms.css
@@ -521,8 +521,8 @@ input[type="submit"][disabled]:active,
 input[type="submit"][disabled] {
   
 
-  padding: 1px 7px 1px 7px;
-  border: 1px outset ButtonShadow;
+  padding: 0px 6px 0px 6px;
+  border: 2px outset ButtonFace;
   color: GrayText;
   cursor: inherit; 
 }
