--- a/layout/reftests/bidi/bidi-006-j.html
+++ b/layout/reftests/bidi/bidi-006-j.html
@@ -12,21 +12,38 @@
 
 
 
+
+
 <html>
  <head>
-  <meta http-equiv="content-type" content="text/html; charset=utf-8";
+  <meta http-equiv="content-type" content="text/html; charset=utf-8">
  </head>
   <style type="text/css">
-p {   
+body { background: white; color: black; }
+p {
   font-family: sans-serif;
-  font-size: 36pt;
-  width: 9pt;
-  overflow-x: hidden;
+  font-size: 36px;
+  margin: 0;
   text-align: justify;
-  margin: 48pt;
+}
+span {
+  display: inline-block;
+  width: 3em;
+  height: 3em;
+  margin-top: -2em;
+  vertical-align: bottom;
+  background: white;
+}
+/* borders should be covered by overhang */
+p#test {
+  border-left: 3em solid red;
+  border-right: 3em solid red;
+  width: -moz-intrinsic;
+  width: intrinsic;
 }
   </style>
  <body>
-  <p>&#x5d9;&#x5b8;</p>
+  <p id="test">&#x5d6;&#x5b8;</p>
+  <p id="overhang"><span></span>&#x5d6;<span></span></p>
  </body>
 </html>
