--- a/layout/reftests/bidi/bidi-006-ref.html
+++ b/layout/reftests/bidi/bidi-006-ref.html
@@ -12,19 +12,30 @@
 
 
 
+
+
 <html>
  <head>
-  <meta http-equiv="content-type" content="text/html; charset=utf-8";
+  <meta http-equiv="content-type" content="text/html; charset=utf-8">
  </head>
   <style type="text/css">
-p {   
+body { background: white; color: black; }
+p {
   font-family: sans-serif;
-  font-size: 36pt;
-  width: 9pt;
-  margin: 48pt;
+  font-size: 36px;
+  margin: 0;
 }
+span {
+  display: inline-block;
+  width: 3em;
+  height: 3em;
+  margin-top: -2em;
+  vertical-align: bottom;
+}
+p#test { margin: 0 3em; }
   </style>
  <body>
-  <p>&#x5d9;&#x5b8;</p>
+  <p id="test">&#x5d6;&#x5b8;</p>
+  <p id="overhang"><span></span>&#x5d6;<span></span></p>
  </body>
 </html>
