fix for bug #387996:  add a "Places" folder to the bookmarks menu, populated with smart folders fix for bug #387734:  add a "Places" folder to the bookmarks toolbar, populated with smart folders fix for bug #385826:  pre-populated places queries fix for bug #396807:  have "top 10 most visited sites" as a pre-populated smart folder fix for bug #385831:  Investigate dependencies for Most Used Tags query fix for bug #378799:  GROUP_BY_FOLDER only works in simple bookmark-folder queries thanks to dietrich for the initial GROUP_BY_FOLDER patch. r=dietrich,mano  a=blocking-firefox-3+
UltraBlame original commit: b2a6ba13ecd73c8b0a9e4e55e9fbfc3eb93d90c8

--- a/browser/themes/winstripe/browser/browser.css
+++ b/browser/themes/winstripe/browser/browser.css
@@ -244,6 +244,12 @@ menuitem.bookmark-item {
 
 
 
+.query-item[container] {
+  list-style-image: url("chrome://browser/skin/places/query.png");
+}
+
+
+
 .toolbarbutton-1 {
   -moz-box-orient: vertical;
   min-width: 0;
