Bug 336736: Improved reftest.  (Using an exact-pixel-width div instead of a character, to avoid a pixel-rounding issue that made the old reftest fail on Mac)
UltraBlame original commit: 5ede884a8aa2a67f842a03e1c64e130cf564889d

--- a/layout/reftests/bugs/336736-1-ref.html
+++ b/layout/reftests/bugs/336736-1-ref.html
@@ -1,13 +1,5 @@
 <html>
 <body>
-
-
-<MARQUEE 
-  direction="right" 
-  scrollamount="0"
-  behavior="alternate"
->
- a
-</MARQUEE>
+<div style="background: green; width: 50px">&nbsp;</div>
 </body>
 </html>
