--- a/layout/reftests/bugs/336736-1a.html
+++ b/layout/reftests/bugs/336736-1a.html
@@ -2,12 +2,12 @@
 <body dir="rtl">
 
 
-<MARQUEE 
+<marquee 
   direction="right" 
   scrollamount="0"
   behavior="alternate"
 >
- a
-</MARQUEE>
+<div style="background: green; width: 50px">&nbsp;</div>
+</marquee>
 </body>
 </html>
