Bug 251910 - "No hover highlighting (i.e. mouse-tracking) in Bookmarks/History sidebar" (follow-up patch) [p=dao r=sspitzer aM9=mconnor]
UltraBlame original commit: 681ac45c10d8b3be877fb7ea2217a78143e516bb

--- a/browser/themes/pinstripe/browser/places/places.css
+++ b/browser/themes/pinstripe/browser/places/places.css
@@ -1,4 +1,27 @@
 
+
+.sidebar-placesTree {
+  -moz-appearance: none;
+  border: 0;
+  margin: 0;
+  border-top: 1px solid ThreeDShadow;
+}
+
+.sidebar-placesTreechildren::-moz-tree-cell(leaf) ,
+.sidebar-placesTreechildren::-moz-tree-image(leaf) {
+  cursor: pointer;
+}
+
+.sidebar-placesTreechildren::-moz-tree-cell-text(leaf, hover) {
+  cursor: pointer;
+  text-decoration: underline;
+}
+
+.sidebar-placesTreechildren::-moz-tree-cell(separator) {
+  cursor: default;
+}
+
+
 #placesToolbar {
   border-bottom: none;
 }
