--- a/browser/themes/winstripe/browser/browser.css
+++ b/browser/themes/winstripe/browser/browser.css
@@ -1834,6 +1834,11 @@ toolbarbutton.bookmark-item[dragover="true"][open="true"] {
 
 
 
+
+#urlbar .autocomplete-textbox-container {
+  -moz-box-align: stretch;
+}
+
 #identity-box {
   cursor: help;
   background-color: ThreeDFace;
