--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -24,6 +24,10 @@ menuitem.spell-suggestion {
   -moz-user-focus: normal;
 }
 
+.verifiedDomain > #identity-icon-label {
+  display: none;
+}
+
 
 window[sizemode="maximized"] #content .notification-inner {
   border-right: 0px !important;
