--- a/toolkit/themes/winstripe/global/netError.css
+++ b/toolkit/themes/winstripe/global/netError.css
@@ -105,6 +105,16 @@ body[dir="rtl"] #brand {
   display: none;
 }
 
+#securityOverrideDiv {
+  padding-top: 10px;
+}
+
+#securityOverrideContent {
+  background-color: #FFF090; 
+  padding: 10px;
+  -moz-border-radius: 10px;
+}
+
 
 :root.blacklist #errorTitle, :root.blacklist #errorLongContent,
 :root.blacklist #errorShortDesc, :root.blacklist #errorLongDesc,
