bug 195492: lots of page info stuff r=neil, sr=rbs
UltraBlame original commit: 8bf9ff95ac474dffa3874aad6fb5b2f9f62d2709

--- a/browser/themes/gnomestripe/browser/pageInfo.css
+++ b/browser/themes/gnomestripe/browser/pageInfo.css
@@ -1,3 +1,40 @@
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 @import "chrome://global/skin/";
 
 tree {
@@ -29,4 +66,8 @@ textbox.header {
 
 .fixedsize {
   height: 8.5em;
+}
+
+textbox[disabled] {
+  text-style: italic;
 }
