--- a/browser/themes/gnomestripe/browser/browser.css
+++ b/browser/themes/gnomestripe/browser/browser.css
@@ -66,6 +66,10 @@
 -moz-padding-start: 4px; 
 }
 
+#searchbar[empty="true"] .searchbar-textbox {
+  color: GrayText;
+}
+
 
 
 toolbarbutton.bookmark-item {
@@ -904,7 +908,7 @@ toolbar[mode="text"] > #window-controls > toolbarbutton > .toolbarbutton-text {
 
 #urlbar[level="high"] > .autocomplete-textbox-container,
 #urlbar[level="low"] > .autocomplete-textbox-container {
-  background-color: #F5F6BE; 
+  background-color: blue;  
   color: #000000;
 }
 
