Bug 338000 - Hide bottom border partially only on Windows Classic theme. r=mconnor
UltraBlame original commit: 4b1920cacd2f7b5e959ff09b744b5af17862d7bb

--- a/browser/themes/gnomestripe/browser/browser.css
+++ b/browser/themes/gnomestripe/browser/browser.css
@@ -55,16 +55,30 @@
   min-height: 26px;
 }
 
+%ifdef XP_WIN
 
 
 
-#navigator-toolbox {
-  margin-bottom: -1px;
+
+
+
+#navigator-toolbox > toolbar {
+  border-top: 1px solid transparent;
+  border-bottom: 1px solid transparent;
+  -moz-border-top-colors: ThreeDHighlight;
+  -moz-border-bottom-colors: ThreeDShadow;
 }
 
-.tabbrowser-strip {
-  margin-top: 1px;
+
+#navigator-toolbox > toolbar:first-child,
+#navigator-toolbox > toolbar[moz-collapsed="true"]:first-child + toolbar {
+  border-top: none;
 }
+
+#sidebar-box > sidebarheader {
+  border-top: 1px solid ThreeDHighlight;
+}
+%endif
 
 
 
