Bug 336847 - Remove half the groove below final toolbar. r=ben
UltraBlame original commit: b740ab9002db25df8afaa8c593a15ba46310f23b

--- a/browser/themes/gnomestripe/browser/browser.css
+++ b/browser/themes/gnomestripe/browser/browser.css
@@ -57,6 +57,17 @@
 
 
 
+
+#navigator-toolbox {
+  margin-bottom: -1px;
+}
+
+.tabbrowser-strip {
+  margin-top: 1px;
+}
+
+
+
 #searchbar .searchbar-dropmarker menuseparator + menuitem { 
 -moz-padding-start: 4px; 
 }
