--- a/browser/themes/gnomestripe/browser/browser.css
+++ b/browser/themes/gnomestripe/browser/browser.css
@@ -68,8 +68,8 @@
 
 
 
-#searchbar .searchbar-dropmarker menuseparator + menuitem { 
--moz-padding-start: 4px; 
+#searchbar .searchbar-popup .open-engine-manager {
+  -moz-padding-start: 4px; 
 }
 
 #searchbar[empty="true"] .searchbar-textbox {
