--- a/browser/themes/gnomestripe/browser/browser.css
+++ b/browser/themes/gnomestripe/browser/browser.css
@@ -55,11 +55,6 @@
   min-height: 26px;
 }
 
-#navigator-toolbox {
-  border-bottom-width: 1px;
-  -moz-border-bottom-colors: ThreeDShadow;
-}
-
 
 
 #searchbar .searchbar-dropmarker menuseparator + menuitem { 
@@ -115,8 +110,6 @@ toolbarbutton.bookmark-item[open="true"] {
 .bookmarks-toolbar-customize {
   display: none;
   max-width: 15em !important;
-  border: none !important;
-  -moz-appearance: none !important;
 }
 
 toolbarpaletteitem[place="toolbar"] .bookmarks-toolbar-customize {
@@ -146,17 +139,16 @@ menuitem.bookmark-item {
 .bookmark-item > .menu-iconic-left > .menu-iconic-icon {
   width: 16px;
   height: 16px;
-  -moz-padding-start: 0px;
 }
 
 
 
-#menu_BookmarksPopup menuitem, .openintabs-menuitem { 
-  -moz-padding-start: 3px;
-}
+#bookmarksMenuPopup > menuitem > .menu-text,
+menupopup[type="places"] > menuitem > .menu-text { 
+  
 
-#menu_BookmarksPopup menuitem.menuitem-iconic { 
-  -moz-padding-start: 0px;
+
+  -moz-margin-start: 16px !important;
 }
 
 
@@ -178,7 +170,7 @@ menuitem.bookmark-item {
 
 
 .bookmark-item  {
-  list-style-image: url("chrome://global/skin/icons/folder-item.png") !important;
+  list-style-image: url("chrome://global/skin/icons/folder-item.png");
   -moz-image-region: rect(0px, 16px, 16px, 0px)
 }
 
@@ -194,11 +186,11 @@ menuitem.bookmark-item {
 
 
 .bookmark-item[livemark="true"] { 
-  list-style-image: url("chrome://browser/skin/livemark-item.png") !important;
+  list-style-image: url("chrome://browser/skin/livemark-item.png");
 }
 
 .bookmark-item[livemark="true"][chromedir="rtl"] { 
-  list-style-image: url("chrome://browser/skin/livemark-item-rtl.png") !important;
+  list-style-image: url("chrome://browser/skin/livemark-item-rtl.png");
 }
 
 .bookmark-item[type="menu"][livemark="true"] { 
