Hack to keep horizontal space from shifting between the urlbar and searchbar when changing between a site that has RSS and/or SSL icons and one that doesn't.  It's not pretty, but it's the best solution we have now. bug: 337427 r=gavin sr+branch=mconnor
UltraBlame original commit: 39beac2e9b7d5a248b914d091b1c75ddd95b3d76

--- a/browser/themes/gnomestripe/browser/browser.css
+++ b/browser/themes/gnomestripe/browser/browser.css
@@ -712,6 +712,18 @@ toolbar[iconsize="small"] #paste-button[disabled="true"] {
 
 
 
+
+
+#urlbar-icons-spacer {
+  width: 100px;
+}
+
+#urlbar-spacer {
+  visibility: hidden;
+}
+
+
+
 #page-proxy-deck,
 #page-proxy-favicon,
 #page-proxy-button {
