--- a/browser/themes/gnomestripe/browser/preferences/preferences.css
+++ b/browser/themes/gnomestripe/browser/preferences/preferences.css
@@ -93,7 +93,7 @@ radio[pane=paneAdvanced]:hover, radio[pane=paneAdvanced][selected="true"] {
 }
 
 
-#browserHomePage {
+#browserStartupHomepage {
   padding-top: 2px;
   padding-bottom: 3px;
   -moz-padding-start: 4px;
