--- a/browser/themes/gnomestripe/browser/preferences/preferences.css
+++ b/browser/themes/gnomestripe/browser/preferences/preferences.css
@@ -252,3 +252,8 @@ filefield[disabled="true"] .fileFieldIcon {
   -moz-margin-start: 6px !important; 
   font-weight: bold;
 }
+
+
+#chooseClientAppCell {
+  -moz-padding-end: 12px;
+}
