--- a/browser/themes/gnomestripe/browser/feeds/subscribe.css
+++ b/browser/themes/gnomestripe/browser/feeds/subscribe.css
@@ -78,6 +78,13 @@ html {
   direction: rtl;
 }
 
+
+@media print {
+  #feedHeaderContainer {
+    display: none;
+  }
+}
+
 body {
   margin: 0;
   padding: 0 3em;
