Free Gnomestripe (Bug 399937 - NPOTB)
UltraBlame original commit: d490bbbb82c696bf067921843a30310111015daf

--- a/browser/themes/gnomestripe/browser/places/places.css
+++ b/browser/themes/gnomestripe/browser/places/places.css
@@ -48,17 +48,17 @@
 
 
 #organizeButton {
-  list-style-image: url("chrome://browser/skin/wrench.png");
+  list-style-image: url("chrome://browser/skin/places/wrench.png");
 }
 
 
 #viewMenu {
-  list-style-image: url("chrome://browser/skin/wrench.png");
+  list-style-image: url("chrome://browser/skin/places/wrench.png");
 }
 
 
 #maintenanceButton {
-  list-style-image: url("chrome://browser/skin/wrench.png");
+  list-style-image: url("chrome://browser/skin/places/wrench.png");
 }
 
 
@@ -105,7 +105,7 @@ treechildren::-moz-tree-image(title, separator) {
 }
 
 treechildren::-moz-tree-image(title, livemark\/bookmarkFeedURI) {
-  list-style-image: url("chrome://browser/skin/livemark-item.png") !important;
+  list-style-image: url("chrome://browser/skin/places/livemark-item.png") !important;
   -moz-image-region: rect(0px, 16px, 16px, 0px);
 }
 
