--- a/browser/themes/gnomestripe/browser/places/editBookmarkOverlay.css
+++ b/browser/themes/gnomestripe/browser/places/editBookmarkOverlay.css
@@ -1,3 +1,4 @@
+%if 0
 
 
 
@@ -34,7 +35,7 @@
 
 
 
-
+%endif
 
 .folder-icon > .menulist-label-box > .menulist-icon {
   width: 16px;
@@ -100,7 +101,6 @@
   -moz-appearance: none;
   padding: 2px 2px 3px 4px;
 }
-
 
 
 
