Make 'vertical-align' work on 'display: inline-table'.  b=404030  r+sr=bzbarsky  a=blocking1.9+
UltraBlame original commit: be97e800d5b8c9e170cf54116105ec160db67f5c

--- a/layout/style/ua.css
+++ b/layout/style/ua.css
@@ -77,6 +77,8 @@
   z-index: inherit;
   page-break-before: inherit;
   page-break-after: inherit;
+  vertical-align: inherit; 
+  line-height: inherit; 
 }
 
 *|*::-moz-table-row {
