make -moz-mathml-anonymous-block "display: inline-block". b=400207, r=dbaron
UltraBlame original commit: c9aa8cf5984e48e96e36b06c8816892c58014950

--- a/layout/mathml/content/src/mathml.css
+++ b/layout/mathml/content/src/mathml.css
@@ -475,9 +475,7 @@ semantics > :not(:first-child) {
 
 
 
-
 *|*::-moz-mathml-anonymous-block {
-  display: block !important;
+  display: inline-block !important;
   position: static !important;
 }
-
