Bug 733469 - Move the applications preferences to in-content UI. r=jaws r=bmcbride
UltraBlame original commit: bb179b7cf7222eb12b085a1be1691a6776da73ed

--- a/browser/themes/gnomestripe/preferences/in-content/preferences.css
+++ b/browser/themes/gnomestripe/preferences/in-content/preferences.css
@@ -102,6 +102,18 @@ prefpane > .content-box {
 
 
 
+#applications-content {
+  padding: 15px;
+}
+
+#handlersView {
+  -moz-appearance: none;
+  border: 1px solid ThreeDShadow;
+  overflow-y: auto;
+}
+
+
+
 description > html|a {
   cursor: pointer;
 }
