--- a/browser/themes/pinstripe/preferences/in-content/preferences.css
+++ b/browser/themes/pinstripe/preferences/in-content/preferences.css
@@ -105,6 +105,18 @@ prefpane > .content-box {
 
 
 
+#applications-content {
+  padding: 15px;
+}
+
+#handlersView {
+  -moz-appearance: none;
+  border: 1px solid rgba(60,73,97,0.5);
+  overflow-y: auto;
+}
+
+
+
 description > html|a {
   cursor: pointer;
 }
