Bug 751164 - Convert debugger.xul to XUL, remove HTML bits.; r=past
UltraBlame original commit: 6d6e0475b348e27c723629785204d05808c85261

--- a/browser/devtools/debugger/debugger.css
+++ b/browser/devtools/debugger/debugger.css
@@ -43,16 +43,8 @@
 
 
 
-#dbg-content > * > .vbox {
+#dbg-content > * > div {
   cursor: default;
-}
-
-
-
-
-
-#dbg-statusbar {
-  -moz-appearance: statusbar;
 }
 
 
@@ -171,12 +163,6 @@
 
 
 
-
-
-.hbox {
-  display: -moz-box;
-  -moz-box-orient: horizontal;
-}
 
 .vbox {
   display: -moz-box;
