Bug 692409 - Add a pretty resizer and the dark theme to the debugger. r=rcampbell
UltraBlame original commit: 32a259ecff5ec48f2ce9e5cc177d689c0b10d38d

--- a/browser/themes/gnomestripe/devtools/common.css
+++ b/browser/themes/gnomestripe/devtools/common.css
@@ -149,3 +149,15 @@
 
   margin: -4px;
 }
+
+
+
+.devtools-horizontal-splitter {
+  -moz-appearance: none;
+  border-top: 1px solid black;
+  border-bottom-width: 0;
+  min-height: 3px;
+  height: 3px;
+  margin-bottom: -3px;
+  position: relative;
+}
