Bug 734082 - Compute and store bounds and visual overflow bounds for both SVG leaf and container frames. r=roc.
UltraBlame original commit: 05a3396204397a4ac11d0964eef04b69b1221184

--- a/layout/svg/base/src/svg.css
+++ b/layout/svg/base/src/svg.css
@@ -68,3 +68,12 @@ foreignObject {
   -moz-transform: translate(0) !important;
   text-indent: 0;
 }
+
+
+
+
+*:not(svg),
+*:not(foreignObject) > svg {
+  -moz-transform-origin:0 0;
+}
+
