Bug 673873 - Display placeholder when focusing empty input - part 2: update reftests. r=mounir
UltraBlame original commit: 75571af38ce558fe095756b741af4d85889c601e

--- a/layout/reftests/forms/placeholder/placeholder-20.html
+++ b/layout/reftests/forms/placeholder/placeholder-20.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html class="reftest-wait">
+  <link rel='stylesheet' type='text/css' href='placeholder-style.css'>
   
   <script type="text/javascript">
     function focusPlaceholder()
@@ -8,7 +9,7 @@
     }
     function setPlaceholder()
     {
-      document.getElementById('p1').placeholder = 'new placeholder';
+      document.getElementById('p1').placeholder = 'my placeholder';
     }
     function disableReftestWait()
     {
