--- a/layout/reftests/forms/placeholder/placeholder-16.html
+++ b/layout/reftests/forms/placeholder/placeholder-16.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html class="reftest-wait">
+  <link rel='stylesheet' type='text/css' href='placeholder-style.css'>
   
   <script type="text/javascript">
     function focusPlaceholder()
@@ -8,7 +9,7 @@
     }
     function setPlaceholder()
     {
-      document.getElementById('p1').placeholder = 'new placeholder';
+      document.getElementById('p1').placeholder = 'my placeholder';
     }
     function disableReftestWait()
     {
@@ -17,6 +18,6 @@
   </script>
 
   <body onload="focusPlaceholder();">
-    <input type="text" id="p1" value="" placeholder="my placeholder" onfocus="setPlaceholder(); disableReftestWait();">
+    <input type="text" id="p1" value="" placeholder="old placeholder" onfocus="setPlaceholder(); disableReftestWait();">
   </body>
 </html>
