--- a/layout/reftests/forms/placeholder/placeholder-7.html
+++ b/layout/reftests/forms/placeholder/placeholder-7.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html class="reftest-wait">
+  <link rel='stylesheet' type='text/css' href='placeholder-style.css'>
   
   <script type="text/javascript">
     function focusPlaceholder()
