Bug 759803 - Remove padding and add side-splitters to common.css in Debugger; r=dcamp
UltraBlame original commit: c8b5f4cd46437129f6335ba01e040eee320254ef

--- a/browser/themes/gnomestripe/devtools/common.css
+++ b/browser/themes/gnomestripe/devtools/common.css
@@ -129,3 +129,14 @@
   margin-bottom: -3px;
   position: relative;
 }
+
+.devtools-side-splitter {
+  -moz-appearance: none;
+  border: 0;
+  -moz-border-start: 1px solid black;
+  min-width: 0;
+  width: 3px;
+  background-color: transparent;
+  -moz-margin-end: -3px;
+  position: relative;
+}
