Bug 922144 - Part 2: Actions first option for Variables View. r=vporof
UltraBlame original commit: 71ecbc0583e2206edbdb6de381289a97864242fc

--- a/browser/themes/linux/devtools/widgets.css
+++ b/browser/themes/linux/devtools/widgets.css
@@ -581,6 +581,12 @@
 
 
 
+.variables-view-container[actions-first] .variables-view-delete {
+  -moz-box-ordinal-group: 0;
+}
+
+
+
 .variable-or-property > tooltip > label {
   margin: 0 2px 0 2px;
 }
