Bug 754344 - Make in-content prefs navigation look like about:addons r=jaws
From 958cacee91f0730b407bf35a65dd0bc9116cdd9e Mon Sep 17 00:00:00 2001

UltraBlame original commit: 109710b0f5f6cc3646298e25652f911bd8500f6a

--- a/browser/components/preferences/handlers.css
+++ b/browser/components/preferences/handlers.css
@@ -2,11 +2,11 @@
 
 
 
-richlistitem {
+#handlersView > richlistitem {
   -moz-binding: url("chrome://browser/content/preferences/handlers.xml#handler");
 }
 
-richlistitem[selected="true"] {
+#handlersView > richlistitem[selected="true"] {
   -moz-binding: url("chrome://browser/content/preferences/handlers.xml#handler-selected");
 }
 
