Backed out changeset 109710b0f5f6 (bug 754344)
UltraBlame original commit: 6f04b612353d38ea533f389616f1c2b5e0fed31d

--- a/browser/components/preferences/handlers.css
+++ b/browser/components/preferences/handlers.css
@@ -2,11 +2,11 @@
 
 
 
-#handlersView > richlistitem {
+richlistitem {
   -moz-binding: url("chrome://browser/content/preferences/handlers.xml#handler");
 }
 
-#handlersView > richlistitem[selected="true"] {
+richlistitem[selected="true"] {
   -moz-binding: url("chrome://browser/content/preferences/handlers.xml#handler-selected");
 }
 
