--- a/browser/themes/osx/preferences/applications.css
+++ b/browser/themes/osx/preferences/applications.css
@@ -14,12 +14,12 @@
   margin-bottom: -1px;
 }
 
-#handlersView > richlistitem label {
+richlistitem label {
   -moz-margin-start: 3px;
   margin-top: 2px;
 }
 
-#handlersView > richlistitem {
+richlistitem {
   min-height: 22px;
 }
 
