Bug 927238 - Fix toggling of selected item in select menus. r=rsilveira
UltraBlame original commit: 547c6caec56f5f0740886f2bbdc587f57b2993b9

--- a/browser/metro/theme/platform.css
+++ b/browser/metro/theme/platform.css
@@ -220,6 +220,11 @@ menulist {
 }
 
 
+#select-commands > .option-command > label {
+  pointer-events: none;
+}
+
+
 .option-command > listcell {
   -moz-box-flex: 1 !important;
 }
