Bug 929384 - Display color swatch for background properties with href. r=pbrosset
UltraBlame original commit: e6f6a24aec2563609f8037c1a3c1a659261da65a

--- a/browser/themes/shared/devtools/dark-theme.css
+++ b/browser/themes/shared/devtools/dark-theme.css
@@ -61,6 +61,16 @@
   color: #3689b2;
 }
 
+
+
+
+
+.theme-link:visited,
+.cm-s-mozilla .cm-link:visited { 
+  color: #3689b2;
+}
+
+
 .theme-comment,
 .cm-s-mozilla .cm-meta,
 .cm-s-mozilla .cm-hr,
